# Pandda-ADiCT

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  ruff.yml
cmake/: installation.cmake
dp3_server/: CMakeLists.txt  README.md  docker-compose.yml  requirements.txt
dp3_server/config/: api.yml  control.yml  database.yml  garbage_collector.yml  history_manager.yml  processing_core.yml  snapshots.yml  updater.yml
dp3_server/config/db_entities/: ip.yml
dp3_server/config/modules/: ip_filter.yml
dp3_server/docker/rabbitmq/: init-rmq.sh
dp3_server/modules/: dns_open_resolver.py  ip_activity.py  ip_activity_classifier.py  ip_filter.py  ip_to_dns_hostname.py
dp3_server/scripts/: munin_data_age_by_src.py  munin_ips_per_attr.py  rabbitmq_data.py  rmq_reconfigure.sh
frontend/: .env.production  CMakeLists.txt  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: ActivityClassBadge.vue  ActivityTimeline.vue  CopyPermalinkButton.vue  IPSubnetRedirectPicker.vue  NavigationBar.vue  ObservationsTimeline.vue  OpenResolverBadge.vue  PaginatedListing.vue  ProgressBar.vue  RequestsState.vue  SnapshotsTimePicker.vue  SnapshotsTimePickerHistoryPermalinkButton.vue  SnapshotsTimePickerLatestDataPermalinkButton.vue  SnapshotsTimePickerUrlSync.vue  ThemeToggle.vue  TimelineSelect.vue
frontend/src/router/: index.js
frontend/src/stores/: requestsState.js  theme.js
frontend/src/templates/: EntityDetailTemplate.vue
frontend/src/utils/: commonCharts.js  datetime.js
frontend/src/views/: HomeView.vue  IPSubnetLandingView.vue  IPSubnetView.vue  IPView.vue
nemea_modules/: CMakeLists.txt  Makefile
nemea_modules/common/: CMakeLists.txt  ip_network_filter.py
nemea_modules/dp_aggregator/: CMakeLists.txt  README.md  dp_aggregator.py
nemea_modules/ip_activity/: CMakeLists.txt  ip_activity.py
nemea_modules/ip_activity2/: CMakeLists.txt  ip_activity.sup  ip_activity2.py
nemea_modules/nemea_adict_sender/: CMakeLists.txt  README.md  nead.py
nemea_modules/open_ports/: CMakeLists.txt  README.md  open_ports.py
nemea_modules/recog/: CMakeLists.txt  README.md  recog.py  recog_example.sup
scripts/: post_install.sh
